resulting ranking log styles updated

--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -336,4 +336,71 @@
             <!-- dummy logs -->
         </div>
     </div>
+    <div class="log_section_data">
+        <div class="header-sec">
+            <div class="h-title">LOG (26)</div>
+            <div class="close_icon"><img src="assets/icons/resultranking/close-log.svg"></div>
+        </div>
+        <perfect-scrollbar>
+            <div class="body_content">
+                <div class="accordion_sec">
+                    <div id="accordion">
+                        <div class="card-acc">
+                          <div class="card-header-acc">
+                            <div class="card-link-acc" data-toggle="collapse" href="#collapseOne1">Pinned Result - FAQ</div>
+                          </div>
+                          <div id="collapseOne1" class="collapse" data-parent="#accordion">
+                            <div class="card-body-acc">
+                              <div class="question-text">Can I make Credit Card payments via a savings account?</div>
+                              <div class="ans-info">You can set up a Standing Instruction to debit your Credit Card Payments easily via phone or laptop as per your ...</div>
+                            </div>
+                          </div>
+                        </div>                       
+                    </div>
+                    <div class="row align-items-center justify-content-end ml-0 mr-0 mt-3">
+                        <div class="user-name">Riley Cooper</div>
+                        <div class="time-stamp">2h ago</div>
+                    </div>
+                </div>
+                <div class="accordion_sec">
+                    <div id="accordion">
+                        <div class="card-acc">
+                          <div class="card-header-acc">
+                            <div class="card-link-acc" data-toggle="collapse" href="#collapseOne2">Boosted Result - Bot Action</div>
+                          </div>
+                          <div id="collapseOne2" class="collapse" data-parent="#accordion">
+                            <div class="card-body-acc">
+                              <div class="question-text">Can I make Credit Card payments via a savings account?</div>
+                              <div class="ans-info">You can set up a Standing Instruction to debit your Credit Card Payments easily via phone or laptop as per your ...</div>
+                            </div>
+                          </div>
+                        </div>                       
+                    </div>
+                    <div class="row align-items-center justify-content-end ml-0 mr-0 mt-3">
+                        <div class="user-name">Emily Wong</div>
+                        <div class="time-stamp">4h ago</div>
+                    </div>
+                </div>
+                <div class="accordion_sec">
+                    <div id="accordion">
+                        <div class="card-acc">
+                          <div class="card-header-acc">
+                            <div class="card-link-acc" data-toggle="collapse" href="#collapseOne3">Buried Result - FAQ</div>
+                          </div>
+                          <div id="collapseOne3" class="collapse" data-parent="#accordion">
+                            <div class="card-body-acc">
+                              <div class="question-text">Can I make Credit Card payments via a savings account?</div>
+                              <div class="ans-info">You can set up a Standing Instruction to debit your Credit Card Payments easily via phone or laptop as per your ...</div>
+                            </div>
+                          </div>
+                        </div>                       
+                    </div>
+                    <div class="row align-items-center justify-content-end ml-0 mr-0 mt-3">
+                        <div class="user-name">Thomas Milner</div>
+                        <div class="time-stamp">6h ago</div>
+                    </div>
+                </div>
+            </div>
+        </perfect-scrollbar>        
+    </div>
 </div>
