--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.scss
@@ -1,5 +1,6 @@
 @import './../../../app/scss/variables/variables.scss';
 .faqmain-container{
+    // position: relative;
     .cursor-pointer {
         cursor: pointer;
     }
@@ -1107,6 +1108,86 @@
                             }
                         }
                     }
+                }
+            }
+        }
+    }
+}
+
+
+.log_section_data{
+    position: absolute;
+    top: 60px;
+    right: 0;
+    height: calc(100% - 60px);
+    background: #FFFFFF;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+    width: 400px;
+    .header-sec{
+        padding: 18px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .h-title{
+            color: #26344A;
+            letter-spacing: 0.714286px;
+            text-transform: uppercase;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 14px;
+        }
+        .close_icon{
+            img{
+                cursor: pointer;
+            }
+        }
+    }
+    perfect-scrollbar{
+        height: calc(100% - 60px);
+    }
+    .body_content{
+        padding: 0 18px;
+        .accordion_sec{
+            padding: 13px 0;
+            background: #FFFFFF;
+            box-shadow: inset 0px -0.5px 0px #DDDDDD;
+            .card-acc{
+                .card-header-acc{
+                    .card-link-acc{
+                        color: #423F3F;
+                        font-weight: 600;
+                        font-size: 12px;
+                        line-height: 14px;
+                    }
+                }
+            }
+            .user-name{
+                color: #9B9B9B;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 14px;
+            }
+            .time-stamp{
+                color: #9B9B9B;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 15px;
+                margin-left: 16px;
+            }
+            .card-body-acc{
+                padding-top: 12px;
+                .question-text{
+                    color: #979797;
+                    font-weight: 600;
+                    font-size: 12px;
+                    line-height: 15px;
+                    margin-bottom: 2px;
+                }
+                .ans-info{
+                    color: #9B9B9B;
+                    font-weight: normal;
+                    font-size: 10px;
+                    line-height: 12px;
                 }
             }
         }
