--- a/findly-builder/src/app/components/scheduler/scheduler.component.html
+++ b/findly-builder/src/app/components/scheduler/scheduler.component.html
@@ -86,7 +86,7 @@
               <li (click) = "repeatTimeZone('Monthly')"><a>Monthly</a></li>
               <li (click) = "repeatTimeZone('Annually')"><a>Annually</a></li>
               <li (click) = "repeatTimeZone('Every weekday(Monday to Friday)')"><a>Every weekday(Monday to Friday)</a></li>
-              <li (click) = "openCustomRecModal('Custom')"><a>Custom</a></li>
+              <li (click) = "openCustomRecModal('Custom')"><a>Custom...</a></li>
             </ul>
           </div>
       </div>
