--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -1,1 +1,38 @@
-<p>app-experiments works!</p>
+<div class="experiment-container">
+    <div class="header-sec col-12 row m-0">
+        <div class="col-10 p-0 title-header"></div>
+         <div class="col-2 right-sec p-0"> 
+                <div class="kr-sg-input-text m-0">
+                    <input type="text" placeholder="Search" autocomplete="off" class="input-search" placeholder="Search">
+                </div>
+                <div class="seach-block"><img src="assets/icons/search.svg"><img src="assets/images/close.svg" class="d-none">Search
+                </div> 
+                <div class="add" (click)="addExperiment()">
+                    <img src="assets/icons/add_plus.svg" >Add Experiment
+                </div>
+         </div>
+    </div>
+    <perfect-scrollbar class="scroll-table">
+        <div class="no-experiments centered">
+            <img src="assets/icons/experiment/empty_experiments.svg" >
+            <div class ="title">You haven't added any Experiment yet</div>
+            <div class ="dec">Fortunately , it is very easy  to add one by clicking on the Add experiments</div>
+        </div>
+    </perfect-scrollbar>
+</div>
+
+<kr-modal modalType="center" modalClass="modal_popups_ addFieldModalPop smallModal"  #addExperiments>   
+    <div class="modal-header">
+        <div class="title">New experiments</div>
+        <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
+    </div>
+    <perfect-scrollbar class="perfect-scroll-modal-body">
+    <div class="modal-body textAlignLeft">
+     
+    </div>
+    </perfect-scrollbar> 
+    <div class="modal-footer text-left">
+        <button type="button"  class="kr-sg-button-primary btn_lg float-right" (click)="switchToTerminal()">Proceed</button>                   
+        <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModalPopup()">Cancel</button>
+    </div>    
+</kr-modal>
