--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -80,9 +80,9 @@
 			<div class="sub-title marginTop15">Search Configuration</div>
 			<div class="kr-sg-dropdowns queryPipelineConfig" #selectResourceDrop='ngbDropdown' ngbDropdown [placement]="'bottom-right'">
 				<div class="dropdown dropdown-open">
-					<button class="dropdown-toggle dropdown-input" ngbDropdownToggle>Default</button>
+					<button class="dropdown-toggle dropdown-input" ngbDropdownToggle>{{configObj[selectedConfig]?configObj[selectedConfig].name:'Loading..'}}</button>
 					<ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
-						<li (click)="selectQueryPipelineId()"><span class="list-name">Default</span></li>
+						<li (click)="selectQueryPipelineId(config)" *ngFor="let config of queryConfigs"><span class="list-name">{{config.name}}</span></li>
 						<li (click)="openModalPopup()" class="create"><span class="list-name ">Create new</span><span class="plus">+</span></li>
 					</ul>
 				</div>
@@ -220,11 +220,24 @@
     </div>
     <perfect-scrollbar class="perfect-scroll-modal-body">
     <div class="modal-body textAlignLeft">
-     
+		<div class="group-radiobutton">
+			<div class="kr-sg-radiobutton">
+				<input id="createQueryConfig" [(ngModel)]="newConfigObj.method" name="radio" value='default' class="radio-custom" type="radio">
+				<label for="createQueryConfig" class="radio-custom-label">Create New</label>
+			</div>
+			<div class="kr-sg-radiobutton">
+				<input id="cloneQueryConfig" [(ngModel)]="newConfigObj.method" name="radio" value='clone' class="radio-custom" type="radio">
+				<label for="cloneQueryConfig" class="radio-custom-label">Clone Configuration</label>
+			</div>
+	    </div> 
+		<div class="kr-sg-input-text">
+			<div class="label-text" >Name</div>
+			<input type="text" placeholder="Placeholder text" [(ngModel)]="newConfigObj.name" class="input-text">
+		</div>
     </div>
     </perfect-scrollbar> 
     <div class="modal-footer text-left">
-        <button type="button"  class="kr-sg-button-primary btn_lg float-right" (click)="switchToTerminal()">Proceed</button>                   
+        <button type="button" [disabled]="!newConfigObj.name" class="kr-sg-button-primary btn_lg float-right" (click)="createConfig()">Proceed</button>                   
         <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModalPopup()">Cancel</button>
     </div>    
 </kr-modal>
