--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -2,11 +2,11 @@
     <div class="header-sec col-12 row m-0">
         <div class="col-10 p-0 title-header"></div>
          <div class="col-2 right-sec p-0"> 
-                <div class="kr-sg-input-text m-0">
+                <!-- <div class="kr-sg-input-text m-0">
                     <input type="text" placeholder="Search" autocomplete="off" class="input-search" placeholder="Search">
                 </div>
                 <div class="seach-block"><img src="assets/icons/search.svg"><img src="assets/images/close.svg" class="d-none">Search
-                </div> 
+                </div>  -->
                 <div class="add" (click)="addExperiment()">
                     <img src="assets/icons/add_plus.svg" >Add Experiment
                 </div>
